[package]
name = "twitch_piramid_bot"
version = "0.1.0"
edition = "2024"
default-run = "twitch_piramid_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15", features = ["toml"] }
file-rotate = "0.8"
futures-util = "0.3"
governor = "0.10"
log = "0.4"
minijinja = { version = "2.8", features = ["loader"] }
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rusqlite = { version = "0.35", features = ['bundled'] }
rustls = "0.23.23"
serde = "1.0"
serde_json = "1.0"
serde_regex = "1.1"
simplelog = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
twitch-irc = { version = "5.0", features = [
  "transport-ws-rustls-webpki-roots",
  "refreshing-token-rustls-webpki-roots",
], default-features = false }
